**TΔ16 Slack 계층 삭제**