@@ -11,12 +11,10 @@ import com.devwuu.mocha.domain.Note;
 import com.devwuu.mocha.llm.OpenAiUtteranceSegmenter;
 import com.devwuu.mocha.service.NoteTxService;
 import com.devwuu.mocha.service.NoteService;
-import com.devwuu.mocha.slack.AgentConversationRouter;
-import com.devwuu.mocha.slack.inbound.IncomingMessage;
-import com.devwuu.mocha.slack.inbound.SlackPhotoIntake;
-import com.devwuu.mocha.slack.outbound.MochaMessages;
 import com.openai.client.OpenAIClient;
 import com.openai.client.okhttp.OpenAIOkHttpClient;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import tools.jackson.databind.json.JsonMapper;
 
 import java.io.IOException;
@@ -26,6 +24,8 @@ import java.nio.file.Path;
 import java.time.Clock;
 import java.time.Duration;
 import java.time.ZoneId;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -38,31 +38,43 @@ import static com.devwuu.mocha.agent.tool.ToolCallbackProviderFixture.toolkit;
  * eval 러너의 조립·실행부 — 케이스 1건을 <b>실 LLM으로 1회</b> 리플레이하고 사후 상태를 캡처한다
  * (ref: plan.md#ADR-68, changes/0026 TΔ2).
  *
- * <p>진입점은 {@link AgentConversationRouter#onMessage} — 루프가 아니라 라우터다. 탐지기 → 세그먼터 →
- * 게이트 전처리가 0021의 실측 실패 지점이라 루프 레벨 진입으로는 그 구간이 통째로 빠진다(ADR-68).
+ * <p>진입점은 {@link TurnRunner#run} — 루프가 아니라 턴이다. 탐지기 → 세그먼터 → 게이트 전처리가 0021의
+ * 실측 실패 지점이라 루프 레벨 진입으로는 그 구간이 통째로 빠진다(ADR-68).
+ *
+ * <p><b>0029 TΔ16에서 진입점이 구 {@code AgentConversationRouter.onMessage}에서 여기로 내려왔다.</b>
+ * ADR-69는 케이스 리플레이의 입구가 <i>실사용과 같아야</i> 행동 회귀 측정이 성립한다고 요구하는데,
+ * 실사용 입구가 앱({@code POST /api/agent/turn})으로 바뀌었고 그 컨트롤러가 부르는 것이 바로 이 러너다.
+ * 라우터를 계속 쓰는 쪽이 오히려 <b>실사용에 없는 경로</b>를 재는 것이 됐다. 러너 위에 남아 있던 Slack
+ * 특화(수신 형식·응답 배달·사진 버퍼)는 케이스가 재는 대상이 아니었으므로 판정에 손실이 없다.
  *
  * <p>조립 원칙은 "판정 대상은 실물, 부수효과만 대체"다. 저장소는 인메모리 Map이 아니라 실 구현체를 쓴다 —
  * 직렬화·영속 왕복 자체가 검증에 포함되기 때문이다(백엔드 CLAUDE.md §5.2). 노트({@link NoteTxService})는
  * 로컬 Postgres의 {@code test} 스키마에 산다(changes/0028 TΔ10a).
- * 나머지 대체물은 {@link EvalFakes} 참조.
+ * <p><b>대체물이 0개가 됐다</b>(TΔ16) — 구 {@code EvalFakes}는 Slack·렌더·사진 3종을 비워 두는 곳이었는데,
+ * Slack은 삭제됐고 렌더·사진은 러너가 협력자로 갖지 않는다(카드는 커밋 경로, 사진은 TΔ8a의 업로드 경로).
+ * 남은 협력자는 전부 실물이고, 그 자체가 <i>턴이 외부 부수효과를 갖지 않는다</i>는 사후 확인이다.
  *
  * <p><b>호출부 계약</b>: 노트 저장소는 주입받는다 — 스키마 초기화(회차 간 격리)와 Spring 컨텍스트
  * 소유는 {@link EvalCaseRunnerTest}의 몫이다. 회차마다 스키마가 새로 깔리므로 {@code BIGSERIAL}이 1부터
  * 다시 발급되고, 케이스가 심는 노트의 id는 <b>픽스처 순서로 결정된다</b>(재현성 — 구 slug 고정의 승계).
  *
  * <p>0029 TΔ4: 사후 상태에서 pending이 빠지고 <b>제안 결과</b>가 들어왔다. 서버가 작성 중 데이터를
- * 영속하지 않으므로 뜰 행이 없고, 대신 라우터가 턴마다 만드는 수거함을 {@link RecordingToolCallbacks}가
+ * 영속하지 않으므로 뜰 행이 없고, 대신 턴마다 만들어지는 수거함을 {@link RecordingToolCallbacks}가
  * 붙들어 준다.
  *
- * <p>턴 실패는 예외로 오지 않는다 — {@code onMessage}가 삼키고 재요청 안내를 보낸다(ADR-48). 그래서
- * 판정은 전부 사후 상태({@link Run})로 하고, 폴백 여부만 응답 텍스트와 {@link MochaMessages#AGENT_TURN_FAILED}의
- * <b>상수 동일성</b>으로 가른다 — 모델 출력 문구 단언이 아니다(findings-TΔ0 §1.1).
+ * <p>턴 실패는 <b>예외로 온다</b>(ADR-48 — 러너는 삼키지 않고 전송 계층이 형태를 정한다). 하네스는 그것을
+ * 잡아 해당 턴의 응답을 {@code null}로 기록하고 다음 발화로 진행한다 — 시퀀스가 중단되면 뒤 턴의 행동을
+ * 재지 못한다. <b>0029 TΔ16에서 폴백 판정이 문구 비교에서 벗어났다</b>: 종전에는 응답 텍스트를
+ * {@code MochaMessages.AGENT_TURN_FAILED} 상수와 대조했는데(라우터가 안내를 돌려줬으므로), 이제 예외
+ * 발생 자체가 신호라 <b>비교할 문구가 아예 없다</b> — findings-TΔ0 §1.1이 상수 동일성으로 우회하려던
+ * 자리가 구조적으로 닫혔다.
  */
 final class EvalHarness {
 
-    // 케이스는 단일 사용자 전제(NFR-6)를 그대로 따른다 — 사용자·채널 id는 판정에 쓰이지 않는 고정값.
+    private static final Logger log = LoggerFactory.getLogger(EvalHarness.class);
+
+    // 케이스는 단일 사용자 전제(NFR-6)를 그대로 따른다 — 판정에 쓰이지 않는 고정 키다.
     private static final String USER = "U-eval";
-    private static final String CHANNEL = "C-eval";
     private static final ZoneId SEOUL = ZoneId.of("Asia/Seoul"); // V-3 — 프로덕션 Clock 빈과 동일 존
 
     private EvalHarness() {
@@ -84,7 +96,7 @@ final class EvalHarness {
         static final int MAX_OUTPUT_TOKENS = 4_000;
         static final int TRANSCRIPT_MAX_TURNS = 20;                    // mocha.agent.transcript-max-turns
         static final Duration TRANSCRIPT_TTL = Duration.ofHours(1);    // mocha.agent.transcript-ttl
-        static final Duration PHOTO_BUFFER_WINDOW = Duration.ofMinutes(10); // mocha.photo.buffer-window
+        // mocha.photo.buffer-window는 0029 TΔ16에서 소멸했다 — 사진 버퍼가 Slack 배관이었다.
     }
 
     /**
@@ -94,7 +106,8 @@ final class EvalHarness {
      * @param proposal          마지막 턴의 제안 결과. 제안이 없었으면 empty.
      * @param notesBefore       진입 전 노트 스냅샷(id → 직렬화 본문).
      * @param notesAfter        종료 후 노트 스냅샷 — 커밋은 사용자 확정에서만 일어나므로(AC-59) 무변화가 기대다.
-     * @param replies           턴별 최종 응답 텍스트(발화 시퀀스와 같은 길이).
+     * @param replies           턴별 최종 응답 텍스트(발화 시퀀스와 같은 길이). <b>폴백 턴은 null</b>이다 —
+     *                          응답이 없었다는 뜻이고, 그 자리에 안내 문구를 넣으면 실패가 정상 응답처럼 보인다.
      * @param elapsedMs         전 발화 소요(비용·시간 실측용 — TΔ3 baseline 입력).
      */
     record Run(
@@ -106,10 +119,10 @@ final class EvalHarness {
             long elapsedMs
     ) {
 
-        /** 폴백으로 끝난 턴 — 모델 출력이 아니라 프로덕션 상수와의 동일성 비교다(문구 단언 아님). */
+        /** 폴백으로 끝난 턴 — 응답 부재(= 러너가 예외로 끝낸 턴)가 신호다. 문구 비교가 아니다. */
         List<Integer> fallbackTurns() {
             return java.util.stream.IntStream.range(0, replies.size())
-                    .filter(i -> MochaMessages.AGENT_TURN_FAILED.equals(replies.get(i)))
+                    .filter(i -> replies.get(i) == null)
                     .boxed()
                     .toList();
         }
@@ -135,30 +148,26 @@ final class EvalHarness {
         Files.createDirectories(artifactDir);
 
         // 케이스 today는 instant까지 고정한다 — 턴 타임스탬프·TTL 판정이 시각에서 파생돼 날짜만 고정하면
-        // 회차마다 흔들린다(findings-TΔ0 §1.1). 라우터의 시계 고정점 2종이 이 하나에서 나온다.
+        // 회차마다 흔들린다(findings-TΔ0 §1.1). 턴의 시계 고정점 2종이 이 하나에서 나온다.
         Clock clock = Clock.fixed(evalCase.today().toInstant(), SEOUL);
         JsonMapper mapper = MochaObjectMapper.create();
         loadFixtures(evalCase, noteRepository, mapper);
         FoldingChatMemory transcript =
                 new FoldingChatMemory(Settings.TRANSCRIPT_MAX_TURNS, Settings.TRANSCRIPT_TTL, clock);
-        EvalFakes.CapturingResponder responder = new EvalFakes.CapturingResponder();
 
         ToolCallbackProvider toolkit = toolkit()
                 // 0029 TΔ4a: tool이 잡는 타입이 NoteService다 — 실 저장소를 그 뒤에 세운다.
                 // 별칭 생성기는 null이다: 제안 tool은 커밋을 지나지 않으므로 닿을 일이 없다.
                 .noteService(new NoteService(noteRepository, null))
                 .mapper(mapper)
-                .clock(clock)  // 검증기는 프로덕션(RouterConfig)과 같은 조합으로 파생된다
+                .clock(clock)  // 검증기는 프로덕션(TurnConfig)과 같은 조합으로 파생된다
                 .build();
         RecordingToolCallbacks recorder = new RecordingToolCallbacks(toolkit, mapper);
 
         OpenAIClient openAi = OpenAIOkHttpClient.builder().apiKey(settings.apiKey()).build();
-        SlackPhotoIntake photoIntake = new SlackPhotoIntake(responder,
-                url -> new byte[0], new EvalFakes.EmptyPhotoStore(), new EvalFakes.EmptyPhotoBufferStore(),
-                new EvalFakes.NoOpPhotoInfoExtractor(), Settings.PHOTO_BUFFER_WINDOW, clock);
 
-        // 0029 TΔ6a: 턴 실행부가 라우터에서 빠졌다. 하네스는 계속 라우터를 통해 턴을 돌린다 —
-        // 케이스 리플레이의 입구가 실사용과 같은 경로여야 행동 회귀 측정이 성립한다(ADR-69).
+        // 0029 TΔ16: 이 러너가 진입점이다 — 실사용 입구(POST /api/agent/turn)가 부르는 것과 같은 객체이고,
+        // 케이스 리플레이의 입구가 실사용과 같아야 행동 회귀 측정이 성립한다(ADR-69).
         TurnRunner turnRunner = new TurnRunner(
                 transcript,
                 // 드라이버 시계만 실시간 — 케이스 날짜는 고정(clock)이지만 턴 경과·요청 잔여 예산(ADR-70 ①)은
@@ -170,15 +179,23 @@ final class EvalHarness {
                 new TurnPromptAssembler(mapper, clock),
                 new OpenAiUtteranceSegmenter(openAi, settings.segmenterModel(), mapper),
                 clock);
-        AgentConversationRouter router = new AgentConversationRouter(
-                turnRunner, photoIntake, responder, clock);
 
         Map<String, String> notesBefore = snapshotNotes(noteRepository, mapper);
 
+        // 케이스 v1은 사진 없는 텍스트 턴만 다룬다(ADR-68 비범위) — draft도 null이다. 폼 상태를 동봉하는
+        // 케이스(TΔ2 계약)는 TΔ21이 코퍼스와 함께 세운다.
+        List<String> replies = new ArrayList<>();
         long startedAt = System.nanoTime();
         for (String utterance : evalCase.utterances()) {
-            // 멀티턴은 같은 라우터 인스턴스에 순차 주입 — 턴 사이 문맥은 트랜스크립트가 잇는다.
-            router.onMessage(new IncomingMessage(USER, CHANNEL, utterance));
+            // 멀티턴은 같은 러너·트랜스크립트에 순차 주입 — 턴 사이 문맥은 트랜스크립트가 잇는다.
+            try {
+                replies.add(turnRunner.run(USER, utterance, null).reply());
+            } catch (RuntimeException e) {
+                // 폴백 턴(ADR-48): 응답 없음으로 기록하고 다음 발화로 간다 — 시퀀스를 여기서 끊으면
+                // 뒤 턴의 행동을 재지 못한다. 사유는 프로덕션과 같은 자리(로그)에 남긴다.
+                log.warn("eval 턴 폴백(응답 없음): 원문={}", utterance, e);
+                replies.add(null);
+            }
         }
         long elapsedMs = (System.nanoTime() - startedAt) / 1_000_000;
 
@@ -187,7 +204,8 @@ final class EvalHarness {
                 recorder.proposal(),
                 notesBefore,
                 snapshotNotes(noteRepository, mapper),
-                List.copyOf(responder.posted),
+                // List.copyOf가 아니다 — 폴백 턴의 null을 허용해야 한다(그 자체가 폴백 신호다).
+                Collections.unmodifiableList(replies),
                 elapsedMs);
     }
 
